HelloUltraviolet/Fixtures/RejectedSource/Patterns/TuplePatternArity/Source/Main.uv
//! Rejected pattern specimen for tuple pattern arity mismatch.

public procedure tuplePatternArityReference() -> i32 {
    let pair: (i32, bool) = (1, true)
    let (count, is_ready, extra) = pair
    return count
}
